k8s/insurance-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-service
  template:
    metadata:
      labels:
        app: insurance-service
    spec:
      containers:
        - name: insurance-service
          image: ghcr.io/workshopbooker/insurance-service:latest
          ports:
            - containerPort: 80
